Progress on proposal

--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -89,7 +89,12 @@ parameters. In scientific applications, the underlying process commonly exhibits
 for these dynamics, not allowing for spatiotemporal decision making under uncertainty. Hierarchical statistical models can add spatial and temporal structure
 to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\sigma^2$), but further increase the computational burden of the inference procedure. My proposed research aims to contribute scalable methods which... [finish sentence, maybe be more explicit that my proposal addresses the two issues detailed above]
  
- There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little work has been done to study the proper way to incorporate the additional source of uncertainty introduced by this approximation. Emulator uncertainty is often ignored or accounted for in an ad hoc manner, which can result in overly confident posterior estimates \cite{Cleary, Fer}. There remains a pressing need for a comprehensive methodological study to understand the uncertainty quantification implications of various approaches, and the subsequent development of scalable algorithms that accurately propagate emulator uncertainty.  
+ There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little work has been done to study the proper way to incorporate the additional source of uncertainty introduced by this approximation. Emulator uncertainty is often ignored or accounted for in an ad hoc manner, which can result in overly confident posterior estimates \cite{Cleary, Fer}. There remains a pressing need for a comprehensive methodological study to understand the uncertainty quantification implications of various approaches, and the subsequent development of scalable algorithms that accurately propagate emulator uncertainty. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics of model parameters must be analyzed. There exists a body of literature that considers spatially or temporally indexed model outputs (i.e. variation in $y$) \cite{Sun}, typically through the use of basis function approximations. 
+ 
+ Ad hoc solutions have been developed to deal with computer models with spatially or temporally indexed outputs \cite{Sun}, but these approaches rarely incorporate a
+ explicit spatiotemporal model for the process parameters $\theta$ [cite]. Recent studies in the the terrestrial carbon modeling literature have 
+ taken a step in this direction by allowing process parameters $\theta$ to exhibit Gaussian variability across different ecological data collection
+sites \cite{Fer2}. This hierarchical structure was informative but fails to incorporate explicit spatial information such as a concept of ``nearness'' between the sites. 
 
 \noindent
 \textbf{Research Plan.} Uncertainty quantification is a major theme underlying each stage of this proposal, and is made more difficult
@@ -103,10 +108,7 @@ With methodologically sound and scalable algorithms in hand for the baseline sta
 and time; even if they are believed to be static, a dynamic model allows for spatially and temporally varying uncertainty estimates, which can help identify 
 missing processes in physical models, as well as provide a greater understanding of how models generalize beyond observed data \cite{Fer2, Dietze}. To address these issues I will extend the data model as 
   \[y(s, t) = f(\theta(s, t)) + \epsilon(s, t)\]
- where observed data $y$, process parameters $\theta$, and error $\epsilon$ are all modeled as spatiotemporal processes. Ad hoc solutions have been developed to deal with computer models with spatially or temporally indexed outputs \cite{Sun}, but these approaches rarely incorporate a
- explicit spatiotemporal model for the process parameters $\theta$ [cite]. Recent studies in the the terrestrial carbon modeling literature have 
- taken a step in this direction by allowing process parameters $\theta$ to exhibit Gaussian variability across different ecological data collection
-sites \cite{Fer2}. This hierarchical structure was informative but fails to incorporate explicit spatial information such as a concept of ``nearness'' between the sites. Researchers in both the spatiotemporal statistics and computer modeling communities
+ where observed data $y$, process parameters $\theta$, and error $\epsilon$ are all modeled as spatiotemporal processes. Researchers in both the spatiotemporal statistics and computer modeling communities
 have noted the potential for integrating methods in both fields using modern advances in machine learning and computation \cite{Wikle, Baker}. My proposed research will bridge this divide by (i.) developing novel techniques to integrate modern spatiotemporal dynamical models \cite{Wikle, Hefley}
 within the computer modeling emulation framework, (ii.) develop dimensionality reduction and approximation methods that draw from Bayesian inverse problem 
 theory \cite{Kugler} and Bayesian filtering \cite{Sarkka}, and (iii.) extend my previous uncertainty quantification methodology to this more complex setting. 
