--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -66,11 +66,12 @@ Andrew Roberts
 
 The effectiveness of formally combining scientific theory with statistical and machine learning methods is increasingly being recognized \cite{Willcox, Laubmeier, Wikle}. 
 Physical models encapsulate prior scientific knowledge, while a rigorous statistical framework allows for principled inference, prediction, and uncertainty quantification \cite{Clark}. Computer models have become essential tools at this scientific-statistical interface, tackling problems from 
-climate projections \cite{Canadell} to pandemic response \cite{Swallow}. The task of combining these models with real-world data continues to present
+climate projections \cite{Canadell} to pandemic response \cite{Swallow}. The task of calibrating these models with noisy real-world data continues to present
 significant challenges, requiring tradeoffs between realism and computational and statistical feasibility. Given the ubiquity of computer models in informing
  evidence-based policy, it is essential to develop methods to handle increased complexity while simultaneously providing a full accounting of uncertainties.
 Recent calls have highlighted the need to bring together state-of-the-art computational methods with modern statistical 
-and machine learning models in order to address these problems \cite{Wikle, Baker}. My proposed research aims to address this need by developing novel methodological and computational approaches for combining large-scale datasets with [adjective?] computer models, with the goal of improving scientifically-informed modeling of complex systems. 
+and machine learning models in order to address these problems \cite{Wikle, Baker}. My proposed research aims to confront these challenges by developing novel methodological and computational approaches for integrating large-scale datasets with expensive computer models. 
+% More generally, my research goal  is to improve scientifically-informed modeling of complex systems. 
 
 Complex processes are commonly studied using a computer model $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
 For example, to study the terrestrial carbon cycle, ecologists use a process model $f$ 
@@ -85,11 +86,12 @@ assumes the simulator output gives the mean of the true process, subject to whit
 process parameter $\theta$ and statistical parameter $\sigma^2$. The problem of inferring $\theta$ given the noisy observations $y$ and prior beliefs $\pi_0$ is referred to as a \textit{Bayesian inverse problem} \cite{Stuart}. Solving such a problem is defined 
  as obtaining the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to fit a Gaussian process 
 emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Kennedy, Fer, Cleary}. For example, this approximation is commonly used in terrestrial carbon modeling, given that sophisticated simulations of the carbon cycle can have a runtime of many hours \cite{Fer}. A second complication that arises in practice is the need to account for variation in model
-parameters. In scientific applications, the underlying process commonly exhibits complex dynamics in space and time. The simplified statistical model above fails to account
-for these dynamics, not allowing for spatiotemporal decision making under uncertainty. Hierarchical statistical models can add spatial and temporal structure
-to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\sigma^2$), but further increase the computational burden of the inference procedure. My proposed research aims to contribute scalable methods which... [finish sentence, maybe be more explicit that my proposal addresses the two issues detailed above]
+parameters. In scientific applications, the underlying process commonly exhibits complex dynamics in space and time. The simplified statistical model above fails to account for these dynamics, preventing informed spatiotemporal decision making. Hierarchical statistical models can add spatial and temporal structure
+to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\sigma^2$), but further increase the computational burden of the inference procedure. 
+%[finish sentence, maybe be more explicit that my proposal addresses the two issues detailed above]
  
- There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little work has been done to study the proper way to incorporate the additional source of uncertainty introduced by this approximation. Emulator uncertainty is often ignored or accounted for in an ad hoc manner, which can result in overly confident posterior estimates \cite{Cleary, Fer}. There remains a pressing need for a comprehensive methodological study to understand the uncertainty quantification implications of various approaches, and the subsequent development of scalable algorithms that accurately propagate emulator uncertainty. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics of model parameters must be analyzed. There exists a body of literature that considers spatially or temporally indexed model outputs (i.e. variation in $y$) \cite{Sun}, typically through the use of basis function approximations. 
+
+ There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little work has been done to study the proper way to incorporate the additional source of uncertainty introduced by this approximation [bad sentence]. Emulator uncertainty is often ignored or accounted for in an ad hoc manner, which can result in overly confident posterior estimates \cite{Cleary, Fer}. There remains a pressing need to comprehensively study the uncertainty implications of various approaches, and then to develop scalable algorithms that accurately propagate emulator uncertainty. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics are included. There exists a recent body of literature that considers spatially or temporally indexed model outputs (i.e. variation in $y$), typically through the use of basis function approximations \cite{Fadikar} or thrifty alternatives to full Bayesian inference \cite{Sun}.
  
  Ad hoc solutions have been developed to deal with computer models with spatially or temporally indexed outputs \cite{Sun}, but these approaches rarely incorporate a
  explicit spatiotemporal model for the process parameters $\theta$ [cite]. Recent studies in the the terrestrial carbon modeling literature have 
@@ -140,6 +142,8 @@ Cambridge, United Kingdom and New York, NY, USA, pp. 673–816, doi:10.1017/9781
 \bibitem{Stuart} A. M. Stuart (2010). Inverse problems: A Bayesian perspective. Acta Numerica, 19, pp 451-559 doi:10.1017/
 S0962492910000061.
 \bibitem{Sun} Sun et al, Synthesizing simulation and field data of solar irradiance. Stat Anal Data Min: The ASA Data Sci Journal. 2019; 12: 311– 324. https://doi.org/10.1002/sam.11414
+\bibitem{Fadikar} Fadikar et al, Calibrating a Stochastic, Agent-Based Model Using Quantile-Based Emulation. SIAM/ASA Journal on Uncertainty Quantification. https://doi.org/10.1137/17M1161233.
+
 \end{thebibliography}
 
 
