Minor changes to proposal

--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -91,7 +91,8 @@ to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\
 %[finish sentence, maybe be more explicit that my proposal addresses the two issues detailed above]
  
 
- There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little work has been done to study the proper way to incorporate the additional source of uncertainty introduced by this approximation [bad sentence]. Emulator uncertainty is often ignored or accounted for in an ad hoc manner, which can result in overly confident posterior estimates \cite{Cleary, Fer}. There remains a pressing need to comprehensively study the uncertainty implications of various approaches, and then to develop scalable algorithms that accurately propagate emulator uncertainty. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics are included. There exists a recent body of literature that considers spatially or temporally indexed model outputs (i.e. variation in $y$), typically through the use of basis function approximations \cite{Fadikar} or thrifty alternatives to full Bayesian inference \cite{Sun}.
+ There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little work has been done to study the proper way to incorporate the additional source of uncertainty introduced by this approximation [bad sentence]. Emulator uncertainty is often ignored or accounted for in an ad hoc manner, which can result in overly confident posterior estimates \cite{Cleary, Fer}. There remains a pressing need to comprehensively study the uncertainty implications of various approaches, and then to develop scalable algorithms that accurately propagate emulator uncertainty. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics are included. There exists a recent body of literature that considers spatially or temporally indexed model outputs, typically through the use of basis function approximations \cite{Fadikar} or thrifty alternatives to full Bayesian inference \cite{Sun}. However, these approaches do not consider variation in process 
+ parameters $\theta$ and typically sacrifice full uncertainty quantification to ease computational burdens. 
  
  Ad hoc solutions have been developed to deal with computer models with spatially or temporally indexed outputs \cite{Sun}, but these approaches rarely incorporate a
  explicit spatiotemporal model for the process parameters $\theta$ [cite]. Recent studies in the the terrestrial carbon modeling literature have 
