Progress on proposal

--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -90,18 +90,15 @@ parameters. In scientific applications, the underlying process commonly exhibits
 to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\sigma^2$), but further increase the computational burden of the inference procedure. 
 %[finish sentence, maybe be more explicit that my proposal addresses the two issues detailed above]
  
-
  There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little work has been done to study the proper way to incorporate the additional source of uncertainty introduced by this approximation [bad sentence]. Emulator uncertainty is often ignored or accounted for in an ad hoc manner, which can result in overly confident posterior estimates \cite{Cleary, Fer}. There remains a pressing need to comprehensively study the uncertainty implications of various approaches, and then to develop scalable algorithms that accurately propagate emulator uncertainty. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics are included. There exists a recent body of literature that considers spatially or temporally indexed model outputs, typically through the use of basis function approximations \cite{Fadikar} or thrifty alternatives to full Bayesian inference \cite{Sun}. However, these approaches do not consider variation in process 
- parameters $\theta$ and typically sacrifice full uncertainty quantification to ease computational burdens. 
- 
- Ad hoc solutions have been developed to deal with computer models with spatially or temporally indexed outputs \cite{Sun}, but these approaches rarely incorporate a
- explicit spatiotemporal model for the process parameters $\theta$ [cite]. Recent studies in the the terrestrial carbon modeling literature have 
- taken a step in this direction by allowing process parameters $\theta$ to exhibit Gaussian variability across different ecological data collection
-sites \cite{Fer2}. This hierarchical structure was informative but fails to incorporate explicit spatial information such as a concept of ``nearness'' between the sites. 
+ parameters $\theta$ and typically sacrifice full uncertainty quantification to ease computational burdens. [transition] The benefits of spatiotemporal models have been
+ highlighted, for example, in the terrestrial carbon modeling literature \cite{Fer2}. Carbon models have historically been calibrated independently at different 
+ ecological data collection sites. Hierarchical spatial models have the potential to assimilate data from multiple collection sites, allowing scientists to better understand the spatial variability of ecological processes... [fix this] [Do I want to mention dynamic spatiotemporal models here?] 
+ [I should mention something about large environmental datasets; calibrating on a much larger geographic scale]
 
 \noindent
-\textbf{Research Plan.} Uncertainty quantification is a major theme underlying each stage of this proposal, and is made more difficult
-as increasingly complex statistical models require additional approximation techniques. Therefore, I will begin by addressing fundamental issues of uncertainty in the relatively simpler static, deterministic setting. Specifically, I will develop methods for incorporating emulator uncertainty into the statistical inference algorithm in order to achieve more ``honest'' uncertainty quantification. With this foundation established, I will then be in a position to integrate spatiotemporal dynamics into the statistical model, as well as consider the issue of stochastic simulators. These modeling steps will pose increasingly difficult computational challenges, which I intend to address via an interdisciplinary approach, drawing from spatiotemporal statistics, Bayesian inverse problem theory, and machine learning to develop novel dimensionality reduction and approximation methods. Throughout this process, I will test these methods on terrestrial carbon models commonly used in ecological forecasting \cite{Dietze, Canadell}. 
+\textbf{Research Plan.} To address the challenges highlighted above, I will begin by investigating the fundamental issue of emulator uncertainty in the 
+static setting. Building upon this foundation, I will then work to embed this core methodology in a dynamic spatiotemporal statistical model. These modeling steps will pose increasingly difficult computational challenges, which I intend to address via an interdisciplinary approach, drawing from spatiotemporal statistics, Bayesian inverse problem theory, and machine learning to develop novel dimensionality reduction and approximation methods. Throughout this process, I will test these methods on terrestrial carbon models commonly used in ecological forecasting \cite{Dietze, Canadell}.  
  
  \textbf{1. Propagating Emulator Uncertainty.} I will begin by exploring the ramifications of approximating the computationally expensive model $f$ with the  cheaper Gaussian process emulator $\hat{f}$. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$. Moreover, these existing methods consider only the Gaussian error model and treat emulator uncertainty in an independent fashion, failing to take advantage of the correlation in Gaussian process predictions. I will address these gaps in the literature by (i.) conducting a rigorous comparison of methods for propagating emulator uncertainty under the standard Gaussian noise model, (ii.) developing novel techniques which take advantage of the Gaussian process predictive correlation, and (iii.) generalize these methods to auto-regressive and Laplace error models, both of which 
 are common in ecological applications \cite{Fer}. 
