Progress on proposal

--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -95,6 +95,7 @@ to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\
  highlighted, for example, in the terrestrial carbon modeling literature \cite{Fer2}. Carbon models have historically been calibrated independently at different 
  ecological data collection sites. Hierarchical spatial models have the potential to assimilate data from multiple collection sites, allowing scientists to better understand the spatial variability of ecological processes... [fix this] [Do I want to mention dynamic spatiotemporal models here?] 
  [I should mention something about large environmental datasets; calibrating on a much larger geographic scale]
+ [could also mention Gramacy's comment about full Bayesian inference at the end of solar irradiance paper]
 
 \noindent
 \textbf{Research Plan.} To address the challenges highlighted above, I will begin by investigating the fundamental issue of emulator uncertainty in the 
