--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -73,7 +73,7 @@ Recent calls have highlighted the need to bring together state-of-the-art comput
 and machine learning models in order to address these problems \cite{Wikle, Baker}. My proposed research aims to confront these challenges by developing novel methodological and computational approaches for integrating large-scale datasets with expensive computer models. 
 % More generally, my research goal  is to improve scientifically-informed modeling of complex systems. 
 
-Complex processes are commonly studied using a computer model $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
+Complex processes are commonly analyzed using a computer model $f$, where the output is a function of some unknown, unobserved parameter $\theta$.
 For example, to study the terrestrial carbon cycle, ecologists use a process model $f$ 
 that predicts the net exchange of carbon between an ecosystem and the atmosphere \cite{Friedlingstein, Waring}. Running the model requires specifying values for parameters that 
 may not be known, such as the soil respiration rate or seasonal leaf growth \cite{Fer}. In order to estimate (i.e. calibrate) these unknown parameters, it is necessary to obtain observations $y$ 
@@ -85,13 +85,15 @@ various sources of uncertainty \cite{Kennedy, Clark}. For example, the simple ye
 assumes the simulator output gives the mean of the true process, subject to white noise. The prior distribution $\pi_0$ encodes domain knowledge about the 
 process parameter $\theta$ and statistical parameter $\sigma^2$. The problem of inferring $\theta$ given the noisy observations $y$ and prior beliefs $\pi_0$ is referred to as a \textit{Bayesian inverse problem} \cite{Stuart}. Solving such a problem is defined 
  as obtaining the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to fit a Gaussian process 
-emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Kennedy, Fer, Cleary}. For example, this approximation is commonly used in terrestrial carbon modeling, given that sophisticated simulations of the carbon cycle can have a runtime of many hours \cite{Fer}. A second complication that arises in practice is the need to account for variation in model
-parameters. In scientific applications, the underlying process commonly exhibits complex dynamics in space and time. The simplified statistical model above fails to account for these dynamics, preventing informed spatiotemporal decision making. Hierarchical statistical models can add spatial and temporal structure
-to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\sigma^2$), but further increase the computational burden of the inference procedure. 
+emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Kennedy, Fer, Cleary}. For example, Gaussian process emulation is commonly employed in terrestrial carbon modeling to calibrate sophisticated carbon cycle simulations that can have a runtime of many hours \cite{Fer}. A second complication that arises in practice is the need to account for variation in model
+parameters. In scientific applications, the underlying process commonly exhibits complex dynamics in space and time. The simplified statistical model above fails to account for these dynamics, preventing informed spatiotemporal decision making. Hierarchical statistical models can add spatial and temporal structure to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\sigma^2$), but further increase the computational burden of the inference procedure. 
 %[finish sentence, maybe be more explicit that my proposal addresses the two issues detailed above]
  
- There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little work has been done to study the proper way to incorporate the additional source of uncertainty introduced by this approximation [bad sentence]. Emulator uncertainty is often ignored or accounted for in an ad hoc manner, which can result in overly confident posterior estimates \cite{Cleary, Fer}. There remains a pressing need to comprehensively study the uncertainty implications of various approaches, and then to develop scalable algorithms that accurately propagate emulator uncertainty. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics are included. There exists a recent body of literature that considers spatially or temporally indexed model outputs, typically through the use of basis function approximations \cite{Fadikar} or thrifty alternatives to full Bayesian inference \cite{Sun}. However, these approaches do not consider variation in process 
- parameters $\theta$ and typically sacrifice full uncertainty quantification to ease computational burdens. [transition] The benefits of spatiotemporal models have been
+ There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little research has been done in designing algorithms to properly propagate emulator uncertainty through the inference procedure. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$, thus replacing the true likelihood $N(f(\theta), \sigma^2 I)$
+with the approximation $N(m(\theta), \sigma^2 I)$. This completely ignores the uncertainty introduced by using $\hat{f}$ in place of $f$, leading to overly confident posterior estimates. Ad hoc methods to propagate emulator uncertainty have included a pointwise variance adjustment 
+$\sigma^2 + k(\theta, \theta)$ or re-sampling scheme in which a sample $\hat{y}_{\theta} \sim N(m(\theta), k(\theta, \theta))$ is used to replace $f(\theta)$ as the likelihood mean. \cite{Cleary, Fer}. While an improvement over the naive baseline, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics are included. There exists a recent body of literature that considers spatially or temporally indexed model outputs, addressing computational challenges by using basis function approximations \cite{Fadikar} or thrifty alternatives to full Bayesian inference \cite{Sun}. However, these approaches do not consider variation in process parameters $\theta$ and typically sacrifice full uncertainty quantification to ease computational burdens. 
+
+[transition] The benefits of spatiotemporal models have been
  highlighted, for example, in the terrestrial carbon modeling literature \cite{Fer2}. Carbon models have historically been calibrated independently at different 
  ecological data collection sites. Hierarchical spatial models have the potential to assimilate data from multiple collection sites, allowing scientists to better understand the spatial variability of ecological processes... [fix this] [Do I want to mention dynamic spatiotemporal models here?] 
  [I should mention something about large environmental datasets; calibrating on a much larger geographic scale]
@@ -99,10 +101,15 @@ to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\
 
 \noindent
 \textbf{Research Plan.} To address the challenges highlighted above, I will begin by investigating the fundamental issue of emulator uncertainty in the 
-static setting. Building upon this foundation, I will then work to embed this core methodology in a dynamic spatiotemporal statistical model. These modeling steps will pose increasingly difficult computational challenges, which I intend to address via an interdisciplinary approach, drawing from spatiotemporal statistics, Bayesian inverse problem theory, and machine learning to develop novel dimensionality reduction and approximation methods. Throughout this process, I will test these methods on terrestrial carbon models commonly used in ecological forecasting \cite{Dietze, Canadell}.  
+static setting. Building upon this foundation, I will then work to embed this core methodology in a dynamic spatiotemporal statistical model. These modeling steps will pose increasingly difficult computational challenges, which I intend to address via an interdisciplinary approach, drawing from spatiotemporal statistics, Bayesian inverse problem theory, and machine learning to develop novel dimensionality reduction and approximation methods. Throughout this process, I will test these methods on terrestrial carbon models commonly used in ecological forecasting \cite{Dietze, Canadell}. [Add in collaborations that will go into this work]
  
- \textbf{1. Propagating Emulator Uncertainty.} I will begin by exploring the ramifications of approximating the computationally expensive model $f$ with the  cheaper Gaussian process emulator $\hat{f}$. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$. Moreover, these existing methods consider only the Gaussian error model and treat emulator uncertainty in an independent fashion, failing to take advantage of the correlation in Gaussian process predictions. I will address these gaps in the literature by (i.) conducting a rigorous comparison of methods for propagating emulator uncertainty under the standard Gaussian noise model, (ii.) developing novel techniques which take advantage of the Gaussian process predictive correlation, and (iii.) generalize these methods to auto-regressive and Laplace error models, both of which 
-are common in ecological applications \cite{Fer}. 
+ \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature. I will develop novel algorithms for propagating Gaussian process uncertainty and compare their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive Gaussian process correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. For example, the re-sampling scheme \cite{Fer} can be generalized so that 
+ $(\hat{y}_{\theta}, \hat{y}_{\theta^\prime})$ are drawn jointly from the Gaussian process, where $\theta$ and $\theta^\prime$ are the current and proposed parameter values, respectively. I will also develop an alternate set of algorithms by integrating the Gaussian process out of the likelihood, thus averaging over the emulator uncertainty. This integral can be calculated jointly over $(\hat{f}(\theta), \hat{f}(\theta^\prime))$ and has an analytic solution for the independent Gaussian error model. I will then generalize these ideas to auto-regressive error models for simulators with time-indexed output $f(\theta) = (f_1, f_2, \dots, f_T)$, a common feature in ecological models. 
+ My analysis will include a theoretical generalization of existing parameter calibration theory [cite], numerical experiments, and tests on the SIPNET terrestrial carbon model \cite{Fer}. This simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to compare against brute force approaches that are typically not possible for larger models. This work will contribute theoretical results and off-the-shelf [change this word?] algorithms for emulator uncertainty propagation in statistical inference, supplanting ad hoc approaches with a rigorous modeling framework. cl
+ 
+ These contributions will increase the fundamental understanding of ...and 
+ 
+ My study [diff word] will include existing solutions in the literature independent variance adjustment schemes detailed above
 
  \textbf{2. Spatio-temporal Dynamics.}
 With methodologically sound and scalable algorithms in hand for the baseline static framework, I will then be in a position to begin investigating spatiotemporal generalizations of the statistical model. Given the spatiotemporal nature of most physical processes, this is an important extension that is often ignored, presumably due to computational challenges (\cite{Fer2}, [another citation]). Parameters $\theta$ may naturally be thought to vary over space
