--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -105,11 +105,7 @@ static setting. Building upon this foundation, I will then work to embed this co
  
  \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature. I will develop novel algorithms for propagating Gaussian process uncertainty and compare their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive Gaussian process correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. For example, the re-sampling scheme \cite{Fer} can be generalized so that 
  $(\hat{y}_{\theta}, \hat{y}_{\theta^\prime})$ are drawn jointly from the Gaussian process, where $\theta$ and $\theta^\prime$ are the current and proposed parameter values, respectively. I will also develop an alternate set of algorithms by integrating the Gaussian process out of the likelihood, thus averaging over the emulator uncertainty. This integral can be calculated jointly over $(\hat{f}(\theta), \hat{f}(\theta^\prime))$ and has an analytic solution for the independent Gaussian error model. I will then generalize these ideas to auto-regressive error models for simulators with time-indexed output $f(\theta) = (f_1, f_2, \dots, f_T)$, a common feature in ecological models. 
- My analysis will include a theoretical generalization of existing parameter calibration theory [cite], numerical experiments, and tests on the SIPNET terrestrial carbon model \cite{Fer}. This simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to compare against brute force approaches that are typically not possible for larger models. This work will contribute theoretical results and off-the-shelf [change this word?] algorithms for emulator uncertainty propagation in statistical inference, supplanting ad hoc approaches with a rigorous modeling framework. cl
- 
- These contributions will increase the fundamental understanding of ...and 
- 
- My study [diff word] will include existing solutions in the literature independent variance adjustment schemes detailed above
+ My analysis will include a theoretical generalization of existing parameter calibration theory [cite], numerical experiments, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to compare against brute force approaches that are typically not possible for larger models. This work will contribute theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with a rigorous, validated framework. 
 
  \textbf{2. Spatio-temporal Dynamics.}
 With methodologically sound and scalable algorithms in hand for the baseline static framework, I will then be in a position to begin investigating spatiotemporal generalizations of the statistical model. Given the spatiotemporal nature of most physical processes, this is an important extension that is often ignored, presumably due to computational challenges (\cite{Fer2}, [another citation]). Parameters $\theta$ may naturally be thought to vary over space
