Finished uncertainty propogation section

--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -105,7 +105,8 @@ static setting. Building upon this foundation, I will then work to embed this co
  
  \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature. I will develop novel algorithms for propagating Gaussian process uncertainty and compare their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive Gaussian process correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. For example, the re-sampling scheme \cite{Fer} can be generalized so that 
  $(\hat{y}_{\theta}, \hat{y}_{\theta^\prime})$ are drawn jointly from the Gaussian process, where $\theta$ and $\theta^\prime$ are the current and proposed parameter values, respectively. I will also develop an alternate set of algorithms by integrating the Gaussian process out of the likelihood, thus averaging over the emulator uncertainty. This integral can be calculated jointly over $(\hat{f}(\theta), \hat{f}(\theta^\prime))$ and has an analytic solution for the independent Gaussian error model. I will then generalize these ideas to auto-regressive error models for simulators with time-indexed output $f(\theta) = (f_1, f_2, \dots, f_T)$, a common feature in ecological models. 
- My analysis will include a theoretical generalization of existing parameter calibration theory [cite], numerical experiments, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to compare against brute force approaches that are typically not possible for larger models. This work will contribute theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with a rigorous, validated framework. 
+ My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
+ \text{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to compare against brute force approaches that are typically not possible for larger models. This work will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. 
 
  \textbf{2. Spatio-temporal Dynamics.}
 With methodologically sound and scalable algorithms in hand for the baseline static framework, I will then be in a position to begin investigating spatiotemporal generalizations of the statistical model. Given the spatiotemporal nature of most physical processes, this is an important extension that is often ignored, presumably due to computational challenges (\cite{Fer2}, [another citation]). Parameters $\theta$ may naturally be thought to vary over space
@@ -147,6 +148,8 @@ S0962492910000061.
 \bibitem{Fadikar} Fadikar et al, Calibrating a Stochastic, Agent-Based Model Using Quantile-Based Emulation. SIAM/ASA Journal on Uncertainty Quantification. https://doi.org/10.1137/17M1161233.
 \bibitem{Surjanovic} Surjanovic et al, Virtual Library of Simulation Experiments: Test Functions and Datasets.
 \bibitem{Takamoto} Takamoto et al, PDEBench: An Extensive Benchmark for Scientific Machine Learning. Thirty-sixth Conference on Neural Information Processing Systems Datasets and Benchmarks Track
+\bibitem{Tuo} et al, A theoretical framework for calibration in computer models: parametrization, estimation and convergence properties. 
+
 \end{thebibliography}
 
 
