Progress on proposal

--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -85,30 +85,37 @@ various sources of uncertainty \cite{Kennedy, Clark}. For example, the simple ye
 assumes the simulator output gives the mean of the true process, subject to white noise. The prior distribution $\pi_0$ encodes domain knowledge about the 
 process parameter $\theta$ and statistical parameter $\sigma^2$. The problem of inferring $\theta$ given the noisy observations $y$ and prior beliefs $\pi_0$ is referred to as a \textit{Bayesian inverse problem} \cite{Stuart}. Solving such a problem is defined 
  as obtaining the posterior distribution $p(\theta|y) \propto N(y|f(\theta), \sigma^2 I)\pi_0(\theta)$, which typically involves using an iterative inference procedure like Markov Chain Monte Carlo (MCMC). In practice, the runtime of the simulator $f$ may be prohibitively long, precluding the tens of thousands of evaluations typically required by MCMC. A standard approach to address this problem is to fit a Gaussian process 
-emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Kennedy, Fer, Cleary}. For example, Gaussian process emulation is commonly employed in terrestrial carbon modeling to calibrate sophisticated carbon cycle simulations that can have a runtime of many hours \cite{Fer}. A second complication that arises in practice is the need to account for variation in model
-parameters. In scientific applications, the underlying process commonly exhibits complex dynamics in space and time. The simplified statistical model above fails to account for these dynamics, preventing informed spatiotemporal decision making. Hierarchical statistical models can add spatial and temporal structure to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\sigma^2$), but further increase the computational burden of the inference procedure. 
+emulator $\hat{f}(\cdot) \sim \mathcal{GP}(m(\cdot), k(\cdot, \cdot))$ to approximate $f$, which is then used in place of $f$ in the inference algorithm \cite{Kennedy, Fer, Cleary}. For example, Gaussian process emulation is commonly employed in terrestrial carbon modeling to calibrate sophisticated carbon cycle simulations that can have a runtime of many hours \cite{Fer}. A second complication that commonly arises in scientific applications is the challenge of capturing complex spatiotemporal dynamics of the underlying process while accurately quantifying variation in model parameters across space and time. 
+Limited by computational constraints, scientists often calibrate physical models in limited spatial and temporal domains, treating process parameters $\theta$ and statistical parameters (e.g. $\sigma^2$) as fixed. For example, terrestrial carbon models are typically calibrated independently at ecological data collection sites, reducing the generalizability of calibrated models and preventing informed spatiotemporal decision making \cite{Fer2}. Computational advances offer the potential for large-scale calibration of dynamic computer models over space and time. In the ecological setting this would involve assimilating remotely sensed and ground-based site data on large geographic scales, ...[finish this]
+
+Hierarchical statistical models can add spatial and temporal structure to outputs $y$, process parameters $\theta$, and statistical parameters (e.g. $\sigma^2$), but further increase the computational burden of the inference procedure. 
 %[finish sentence, maybe be more explicit that my proposal addresses the two issues detailed above]
  
  There remains significant work to be done in addressing these complications. While the use of Gaussian process emulators has become standard practice, little research has been done in designing algorithms to properly propagate emulator uncertainty through the inference procedure. Naive emulation would simply use the Gaussian process mean $m(\theta)$ in place of the process model evaluation $f(\theta)$, thus replacing the true likelihood $N(f(\theta), \sigma^2 I)$
 with the approximation $N(m(\theta), \sigma^2 I)$. This completely ignores the uncertainty introduced by using $\hat{f}$ in place of $f$, leading to overly confident posterior estimates. Ad hoc methods to propagate emulator uncertainty have included a pointwise variance adjustment 
 $\sigma^2 + k(\theta, \theta)$ or re-sampling scheme in which a sample $\hat{y}_{\theta} \sim N(m(\theta), k(\theta, \theta))$ is used to replace $f(\theta)$ as the likelihood mean. \cite{Cleary, Fer}. While an improvement over the naive baseline, these methods treat emulator uncertainty as independent across different values of $\theta$, ignoring the correlation structure captured in the predictive variance $k(\cdot, \cdot)$. Uncertainty quantification considerations are complicated further when spatiotemporal dynamics are included. There exists a recent body of literature that considers spatially or temporally indexed model outputs, addressing computational challenges by using basis function approximations \cite{Fadikar} or thrifty alternatives to full Bayesian inference \cite{Sun}. However, these approaches do not consider variation in process parameters $\theta$ and typically sacrifice full uncertainty quantification to ease computational burdens. 
 
-[transition] The benefits of spatiotemporal models have been
- highlighted, for example, in the terrestrial carbon modeling literature \cite{Fer2}. Carbon models have historically been calibrated independently at different 
- ecological data collection sites. Hierarchical spatial models have the potential to assimilate data from multiple collection sites, allowing scientists to better understand the spatial variability of ecological processes... [fix this] [Do I want to mention dynamic spatiotemporal models here?] 
- [I should mention something about large environmental datasets; calibrating on a much larger geographic scale]
- [could also mention Gramacy's comment about full Bayesian inference at the end of solar irradiance paper]
-
 \noindent
 \textbf{Research Plan.} To address the challenges highlighted above, I will begin by investigating the fundamental issue of emulator uncertainty in the 
 static setting. Building upon this foundation, I will then work to embed this core methodology in a dynamic spatiotemporal statistical model. These modeling steps will pose increasingly difficult computational challenges, which I intend to address via an interdisciplinary approach, drawing from spatiotemporal statistics, Bayesian inverse problem theory, and machine learning to develop novel dimensionality reduction and approximation methods. Throughout this process, I will validate these methods on benchmark computer modeling and scientific machine learning problems \cite{Surjanovic, Takamoto}, as well as  common terrestrial carbon models used for ecological forecasting \cite{Dietze, Canadell}. This work is collaborative in nature, co-advised by Jonathan Huggins, who has expertise in scalable Bayesian inference and machine learning, and Michael Dietze, an ecologist with expertise in ecological forecasting and the terrestrial carbon cycle. 
  
  \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature. I will develop novel algorithms for propagating Gaussian process uncertainty and compare their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive Gaussian process correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. For example, the re-sampling scheme \cite{Fer} can be generalized so that 
- $(\hat{y}_{\theta}, \hat{y}_{\theta^\prime})$ are drawn jointly from the Gaussian process, where $\theta$ and $\theta^\prime$ are the current and proposed parameter values, respectively. I will also develop an alternate set of algorithms by integrating the Gaussian process out of the likelihood, thus averaging over the emulator uncertainty. This integral can be calculated jointly over $(\hat{f}(\theta), \hat{f}(\theta^\prime))$ and has an analytic solution for the independent Gaussian error model. I will then generalize these ideas to auto-regressive error models for simulators with time-indexed output $f(\theta) = (f_1, f_2, \dots, f_T)$, a common feature in ecological models. 
+ $(\hat{y}_{\theta}, \hat{y}_{\theta^\prime})$ are drawn jointly from the Gaussian process, where $\theta$ and $\theta^\prime$ are the current and proposed parameter values, respectively. I will also develop an alternate set of algorithms by integrating the Gaussian process out of the likelihood, thus averaging over the emulator uncertainty. This integral can be calculated jointly over $(\hat{f}(\theta), \hat{f}(\theta^\prime))$ and has an analytic solution for the independent Gaussian error model. I will then generalize these ideas to error models for simulators with time-indexed output $f(\theta) = (f_1, f_2, \dots, f_T)$, a common feature in ecological models. To accomplish this I will explore two approaches, (i.) reducing the dimensionality of the output via basis-function 
+ approximations, allowing the application of my previous methods to each basis dimension separately, (ii.) assuming an auto-regressive error model and then 
+ emulating the likelihood under this model instead of the simulator itself, thus reducing back to univariate outputs. [cite]
  My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
  \text{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to compare against brute force approaches that are typically not possible for larger models. This work will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. 
 
- \textbf{2. Spatio-temporal Dynamics.}
+ \textbf{2. Spatiotemporal Dynamics.}
+ The next phase of my proposal involves embedding computer models within a spatiotemporal statistical framework, while continuing to build upon the uncertainty quantification work detailed above. My general approach will involve integrating modern techniques from Bayesian filtering \cite{Sarkka}, inverse problem theory \cite{Kugler}, and spatiotemporal statistics \cite{Wikle, Hefley} within the computer modeling framework. To explicitly model spatiotemporal dynamics, I will consider the general data model
+ \[y(s, t) = f(\theta(s, t)) + \epsilon(s, t)\]
+ where observed data $y$, process parameters $\theta$, and error $\epsilon$ are all modeled as spatiotemporal processes. For example, the process parameters can be modeled using a Markovian linear model
+ \[\theta_t = H_{\gamma_t} \theta_{t - 1} + \delta_t\]
+ where $\theta_t := (\theta_t(s_1), \dots, \theta_t(s_m))$ denotes the process parameters at time $t$ and spatial locations $s_1, \dots, s_m$, 
+ and $H_{\gamma_t}$ is a transition matrix that potentially depends on some time-varying parameters $\gamma_t$. These extensions yield high-dimensional 
+ hierarchical models that pose problems for existing inference algorithms. To address these issues I will 
+ 
+ 
 With methodologically sound and scalable algorithms in hand for the baseline static framework, I will then be in a position to begin investigating spatiotemporal generalizations of the statistical model. Given the spatiotemporal nature of most physical processes, this is an important extension that is often ignored, presumably due to computational challenges (\cite{Fer2}, [another citation]). Parameters $\theta$ may naturally be thought to vary over space
 and time; even if they are believed to be static, a dynamic model allows for spatially and temporally varying uncertainty estimates, which can help identify 
 missing processes in physical models, as well as provide a greater understanding of how models generalize beyond observed data \cite{Fer2, Dietze}. To address these issues I will extend the data model as 
