--- a/research_proposal_methodological.tex
+++ b/research_proposal_methodological.tex
@@ -101,8 +101,7 @@ static setting. Building upon this foundation, I will then work to embed this co
  
  \textbf{1. Propagating Emulator Uncertainty.} I will begin by conducting a rigorous study of emulator uncertainty to fill the current gap in the literature. I will develop novel algorithms for propagating Gaussian process uncertainty and compare their performance to the baseline independent variance adjustment schemes detailed above. To incorporate the predictive Gaussian process correlation structure, I will leverage the correlation between the current and proposed parameter values in Metropolis-Hastings MCMC algorithms. For example, the re-sampling scheme \cite{Fer} can be generalized so that 
  $(\hat{y}_{\theta}, \hat{y}_{\theta^\prime})$ are drawn jointly from the Gaussian process, where $\theta$ and $\theta^\prime$ are the current and proposed parameter values, respectively. I will also develop an alternate set of algorithms by integrating the Gaussian process out of the likelihood, thus averaging over the emulator uncertainty. This integral can be calculated jointly over $(\hat{f}(\theta), \hat{f}(\theta^\prime))$ and has an analytic solution for the independent Gaussian error model. I will then generalize these ideas to error models for simulators with time-indexed output $f(\theta) = (f_1, f_2, \dots, f_T)$, a common feature in ecological models. To accomplish this I will explore two approaches, (i.) reducing the dimensionality of the output via basis-function 
- approximations, allowing the application of my previous methods to each basis dimension separately, (ii.) assuming an auto-regressive error model and then 
- emulating the likelihood under this model instead of the simulator itself, thus reducing back to univariate outputs. [cite]
+ approximations, allowing the application of my previous methods to each basis dimension separately, and (ii.) directly emulating the likelihood under an auto-regressive error model instead of the simulator itself, thus reducing back to univariate outputs. [cite]
  My analysis will include the derivation of theoretical results obtained by extending existing parameter calibration theory \cite{Tuo}, numerical tests from the 
  \text{Virtual Library of Simulation Experiments} \cite{Surjanovic}, and validation on the SIPNET terrestrial carbon model \cite{Fer}. This ecological simulation uses a simplified model of the carbon cycle, yielding a faster runtime which affords the opportunity to compare against brute force approaches that are typically not possible for larger models. This work will contribute novel theoretical results and off-the-shelf, scalable algorithms for emulator uncertainty propagation in statistical inference, supplanting existing ad hoc approaches with rigorous, validated methodology. 
 
